--- a/.gitignore
+++ b/.gitignore
@@ -128,3 +128,6 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+
+**/*.json      # Ignore all .json files
+!data/users.json   # But include data/users.json
